// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DevTemplatesOption component > matches the snapshot for desktop view 1`] = `
<DocumentFragment>
  <div
    class="flex w-full rounded-lg border border-gray-300 flex-nowrap mt-4 relative"
    data-testid="template-option"
  >
    <div
      class="overflow-hidden max-w-[86%]"
    >
      <div
        class="whitespace-nowrap shadow-inner flex mt-1 ml-2 flex-col transition-all ease-in-out duration-500 overflow-hidden max-h-[50px] opacity-90 scale-95"
      >
        <div
          class="flex flex-wrap transition-all duration-500 ease-in-out transform-gpu"
        >
          <div
            class="my-1 mb-2 transition-all duration-500 ease-in-out transform-gpu"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-7lm3m0-MuiChip-root"
              >
                <i
                  class="ci ci-react ci-lg"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  React
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2 transition-all duration-500 ease-in-out transform-gpu"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1izr7bw-MuiChip-root"
              >
                <i
                  class="ci ci-ts-circle ci-lg"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  TypeScript
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2 transition-all duration-500 ease-in-out transform-gpu"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1w1q3jt-MuiChip-root"
              >
                <i
                  class="ci ci-tailwind ci-lg"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  Tailwind CSS
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-auto text-wrap my-2 max-h-20 description-scrollbar transition-all duration-500 ease-in-out transform-gpu"
        />
      </div>
      <div
        class="absolute top-3 right-2 cursor-pointer transition-transform hover:scale-105"
      >
        <div
          aria-label="See template"
          class="hover:bg-gray-700 rounded-full p-1 relative right-[2px] flex items-center justify-center"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-18w7uxr-MuiSvgIcon-root"
            data-testid="RemoveRedEyeOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 6.5c3.79 0 7.17 2.13 8.82 5.5-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12C4.83 8.63 8.21 6.5 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5m0 5c1.38 0 2.5 1.12 2.5 2.5s-1.12 2.5-2.5 2.5-2.5-1.12-2.5-2.5 1.12-2.5 2.5-2.5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5 4.5-2.02 4.5-4.5-2.02-4.5-4.5-4.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DevTemplatesOption component > matches the snapshot for mobile view 1`] = `
<DocumentFragment>
  <div
    class="flex w-full rounded-lg border border-gray-300 flex-nowrap mt-4 relative"
    data-testid="template-option"
  >
    <div
      class="overflow-hidden max-w-[86%]"
    >
      <div
        class="whitespace-nowrap shadow-inner flex mt-1 ml-2 flex-col transition-all ease-in-out duration-500 overflow-hidden max-h-[50px] opacity-90 scale-95"
      >
        <div
          class="flex flex-wrap transition-all duration-500 ease-in-out transform-gpu"
        >
          <div
            class="my-1 mb-2 transition-all duration-500 ease-in-out transform-gpu"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-7lm3m0-MuiChip-root"
              >
                <i
                  class="ci ci-react ci-sm"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  React
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2 transition-all duration-500 ease-in-out transform-gpu"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1izr7bw-MuiChip-root"
              >
                <i
                  class="ci ci-ts-circle ci-sm"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  TypeScript
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2 transition-all duration-500 ease-in-out transform-gpu"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1w1q3jt-MuiChip-root"
              >
                <i
                  class="ci ci-tailwind ci-sm"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  Tailwind CSS
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-auto text-wrap my-2 max-h-20 description-scrollbar transition-all duration-500 ease-in-out transform-gpu"
        />
      </div>
      <div
        class="absolute top-3 right-2 cursor-pointer transition-transform hover:scale-105"
      >
        <div
          aria-label="See template"
          class="hover:bg-gray-700 rounded-full p-1 relative right-[2px] flex items-center justify-center"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-18w7uxr-MuiSvgIcon-root"
            data-testid="RemoveRedEyeOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 6.5c3.79 0 7.17 2.13 8.82 5.5-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12C4.83 8.63 8.21 6.5 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5m0 5c1.38 0 2.5 1.12 2.5 2.5s-1.12 2.5-2.5 2.5-2.5-1.12-2.5-2.5 1.12-2.5 2.5-2.5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5 4.5-2.02 4.5-4.5-2.02-4.5-4.5-4.5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="absolute -bottom-3 right-3 cursor-pointer bg-app-grey rounded-full transition-transform hover:scale-105"
    >
      <span
        aria-label="Show all tools"
        class="ml-auto cursor-pointer hover:opacity-70 flex items-center"
        data-mui-internal-clone-element="true"
      >
        <div
          class="flex items-center justify-center rounded-full text-sm "
        >
          <span
            class="text-white rounded-full flex flex-nowrap"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
